gap fix final

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -50,7 +50,6 @@
 }
 body
 {
-    bottom: 0px;
     position: relative;
     margin: 0px;
     padding: 0px;
